# devtul

./: .devtul_cache.json  .flake8  .gitignore  README.md  build-exe.cmd  issues.md  main.py  pyproject.toml  run-help.ps1  test.py
htmlcov_devtul/: index.html
scripts/: build-exe.cmd  cleanup.cmd  run-help.ps1
src/devtul/: __init__.py  main.py
src/devtul/commands/: __init__.py  copy.py  db.py  dirs.py  empty_items.py  find.py  git_tools.py  list_files.py  markdown.py  metadata.py  new.py  scan.py  scripts.py  tree.py
src/devtul/core/: __init__.py  config.py  constants.py  database.py  file_utils.py  filters.py  git_utils.py  interactive.py  models.py  ollama_utils.py  output.py  pg.py  reporter.py  utils.py
src/devtul/core/db/: database.py  models.py  pg_utils.py  schemas.py  session.py
src/devtul/core/templates/: base.md.jinja  git_meta.md.jinja  git_yaml.yml.jinja  report.html
src/devtul/git/: models.py  utils.py
tests/: test_interactive.py  test_models.py
