[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "devtul"
version = "0.1.10"
description = "A collection of developer tools for working with git repositories."
authors = [
    { name = "Will Morris", email = "willmorris103@gmail.com" },
]
repository = "https://github.com/willmo103/devtul"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "pyyaml",
    "gitpython",
    "sqlite-utils>=3.38",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "piper-tts>=1.3.0",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
build = ["uv_build>=0.8.22,<0.9.0"]

[project.scripts]
dt = "devtul.main:main"
