[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "devtul"
version = "0.1.12"
description = "A collection of developer tools for working with git repositories."
authors = [
    { name = "Will Morris", email = "willmorris103@gmail.com" },
]
repository = "https://github.com/willmo103/devtul"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "sqlite-utils>=3.38",
    "python-dotenv>=1.1.1",
    "piper-tts>=1.3.0",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
    "ollama>=0.6.1",
    "typer>=0.20.0",
    "gitpython>=3.1.45",
    "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
build = ["uv_build>=0.8.22,<0.9.0"]
mssql = [
    "pyodbc>=5.3.0",
]
mongo = [
    "pymongo>=4.15.5",
]
mysql = [
    "mysql>=0.0.3",
]
pg = [
    "psycopg2-binary>=2.9.11",
]
docs = [
    "mkdocs>=1.6.1",
]
all = [
    "pyodbc>=5.3.0",
    "pymongo>=4.15.5",
    "mysql>=0.0.3",
    "psycopg2-binary>=2.9.11",
]
dev = [
    "uv_build>=0.8.22,<0.9.0",
    "mkdocs>=1.6.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.4.0",
]
[project.scripts]
dt = "devtul.main:main"
