[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "devtul"
version = "0.1.13"
description = "A collection of developer tools for working with git repositories."
authors = [
    { name = "Will Morris", email = "willmorris103@gmail.com" },
]
repository = "https://github.com/willmo103/devtul"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "sqlite-utils>=3.38",
    "python-dotenv>=1.1.1",
    "piper-tts>=1.3.0",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
    "ollama>=0.6.1",
    "typer>=0.20.0",
    "gitpython>=3.1.45",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
build = ["uv_build>=0.8.22,<0.9.0"]
mssql = [
    "pyodbc>=5.3.0",
]
mongo = [
    "pymongo>=4.15.5",
]
mysql = [
    "mysql>=0.0.3",
]
pg = [
    "psycopg2-binary>=2.9.11",
]
docs = [
    "mkdocs>=1.6.1",
]
all = [
    "pyodbc>=5.3.0",
    "pymongo>=4.15.5",
    "mysql>=0.0.3",
    "psycopg2-binary>=2.9.11",
]
dev = [
    "uv_build>=0.8.22,<0.9.0",
    "mkdocs>=1.6.1",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.4.0",
]

[tool.uv_build]
package-dir = "src"

[project.scripts]
dt = "devtul.main:main"
dt-ls = "devtul.commands.list_files:entry"
dt-tree = "devtul.commands.tree:entry"
dt-find = "devtul.commands.find:entry"
dt-md = "devtul.commands.markdown:entry"
dt-dirs = "devtul.commands.dirs:entry"
dt-empty = "devtul.commands.empty_items:entry"
dt-new = "devtul.commands.new:entry"


[tool.pytest.coverage.run]
branch = true
source = ["devtul"]
omit = ["tests/*", "src/devtul/__init__.py"]


[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
